fix (responsive) : Fixed errors and layout breaking in different screen

--- a/index.css
+++ b/index.css
@@ -264,18 +264,22 @@
  }
 
  #courses-section {
-     position: relative;
      padding-bottom: clamp(48px, 10vw, 172px);
      margin-bottom: 0;
      z-index: 1;
  }
 
- #courses-section::before {
+ .courses-section-wrapper {
+     position: relative;
+
+ }
+
+ #course-section-floating-background {
      content: "";
      position: absolute;
      bottom: 0;
-     left: -12.5%;
-     width: 98.7vw;
+     left: 0;
+     width: 100%;
      height: 50%;
      background-color: var(--accent-background);
      z-index: -1;
@@ -381,7 +385,7 @@
      position: relative;
      max-width: 100vw;
      margin: 0;
-     padding: clamp(32px, 5vw, 72px) clamp(32px, 8vw, 172px) clamp(48px, 8vw, 130px);
+     padding: clamp(32px, 5vw, 72px) clamp(32px, 9vw, 172px) clamp(48px, 8vw, 130px);
      background: linear-gradient(180deg, var(--accent-background), var(--main-background), hsl(268 100% 3% / 1));
      z-index: 1;
  }
@@ -407,8 +411,7 @@
  }
 
  .quotes-container {
-     /* grid-template-columns: repeat(2, 1fr); */
-     grid-template-columns: repeat(auto-fit, minmax(380px, 1fr));
+     grid-template-columns: repeat(2, 1fr);
      gap: 1.1rem;
      padding: auto;
  }
@@ -453,6 +456,8 @@
  }
 
  .joinNow-cta-content {
+     max-width: 800px;
+     margin-inline: auto;
      text-align: start;
      display: grid;
      background-color: #290057;
@@ -487,6 +492,7 @@
 
  footer {
      display: flex;
+     flex-wrap: wrap;
      font-size: 0.9rem;
      gap: 4px;
      justify-content: center;
@@ -501,8 +507,17 @@
      text-decoration: none;
      font-weight: 800;
  }
-
  @media (max-width:480px) {
+    .floating-quote-left {
+         left: -10%;
+     }
+
+     .floating-quote-right {
+         right: -10%;
+     }
+ }
+
+ @media (max-width:1080px) {
      header {
          padding: 20px 40px;
      }
@@ -542,7 +557,7 @@
 
      #courses-section::before {
          bottom: -10%;
-         left: 0.8%;
+         left: 0;
      }
 
      #courses-section h1 svg,
@@ -550,7 +565,6 @@
          display: none;
      }
 
-     .courses-container,
      .quotes-container {
          grid-template-columns: 1fr;
      }
@@ -568,13 +582,13 @@
 
      .floating-quote-left {
          transform: rotate(-185deg) scale(0.5);
-         left: -10%;
+         left: -6%;
          top: -10%;
      }
 
      .floating-quote-right {
          transform: rotate(-5deg) scale(0.5);
-         right: -10%;
+         right: -6%;
          top: 0;
      }
 
@@ -584,6 +598,7 @@
      }
 
      .joining-benefits {
+        margin-inline: auto;
          grid-row: 2;
      }
 
@@ -599,6 +614,11 @@
 
      .joining-benefits h5 {
          margin-bottom: 8px;
+     }
+     footer {
+        font-size: 12px;
+        text-align: center;
+
      }
 
  }
